--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ tr.row-critical:hover {
 </head>
 
 <body>
-<header>Monitoreo de Backups</header>
+<header>Métricas de respaldos</header>
 
 <div class="container">
 
@@ -1150,3 +1150,4 @@ addChartFullPage(
 </script>
 </body>
 </html>
+
